--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./image/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
+                    <img src="./image/class/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./image/slide2.jpg" alt="Chicago" class="d-block w-100" />
+                    <img src="./image/class/slide2.jpg" alt="Chicago" class="d-block w-100" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./image/slide3.jpg" alt="New York" class="d-block w-100" />
+                    <img src="./image/class/slide3.jpg" alt="New York" class="d-block w-100" />
                 </div>
             </div>
 
@@ -151,8 +151,8 @@
         </button>
     </header>
     <!-- Section-->
-    <section class="py-5">
-      <div class="container px-4 px-lg-5 mt-5">
+    <section>
+      <div class="container px-4 px-lg-5">
         <div class="row mt-2"><h4>실시간 베스트 상품</h4></div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
           <div class="col mb-5">
@@ -290,8 +290,8 @@
     </section>
 
 <!-- Section-->
-<section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
+<section>
+    <div class="container px-4 px-lg-5">
       <div class="row mt-2"><h4>A 지역 베스트 상품</h4></div>
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         <div class="col mb-5">
@@ -299,7 +299,7 @@
                   <!-- Product image-->
                   <img
                       class="card-img-top"
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                      src="./image/image_where/1.jfif"
                       alt="..."
                   />
                   <!-- Product details-->
@@ -331,7 +331,7 @@
               <!-- Product image-->
               <img
                   class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  src="./image/image_where/2.jfif"
                   alt="..."
               />
               <!-- Product details-->
@@ -372,7 +372,7 @@
               <!-- Product image-->
               <img
                   class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  src="./image/image_where/3.jfif"
                   alt="..."
               />
               <!-- Product details-->
@@ -398,7 +398,7 @@
               <!-- Product image-->
               <img
                   class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  src="./image/image_where/4.jfif"
                   alt="..."
               />
               <!-- Product details-->
@@ -429,8 +429,8 @@
   </section>
 
     <!-- Section-->
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
+    <section>
+        <div class="container px-4 px-lg-5">
           <div class="row mt-2"><h4>B 지역 베스트 상품</h4></div>
           <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
@@ -438,7 +438,7 @@
                       <!-- Product image-->
                       <img
                           class="card-img-top"
-                          src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                          src="./image/image_where/5.jfif"
                           alt="..."
                       />
                       <!-- Product details-->
@@ -470,7 +470,7 @@
                   <!-- Product image-->
                   <img
                       class="card-img-top"
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                      src="./image/image_where/6.jfif"
                       alt="..."
                   />
                   <!-- Product details-->
@@ -511,7 +511,7 @@
                   <!-- Product image-->
                   <img
                       class="card-img-top"
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                      src="./image/image_where/7.jfif"
                       alt="..."
                   />
                   <!-- Product details-->
@@ -537,7 +537,7 @@
                   <!-- Product image-->
                   <img
                       class="card-img-top"
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                      src="./image/image_where/8.jfif"
                       alt="..."
                   />
                   <!-- Product details-->
