--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <title>Run Into</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -32,65 +38,77 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/main.js" type="module"></script>
     <script src="../js/includeHTML.js"></script>
-    
   </head>
   <body>
-  
     <nav include-html="/public/html/navbar.html"></nav>
-    <script>includeHTML();</script>
+    <script>
+      includeHTML();
+    </script>
     <hr />
     <!-- Header-->
-    <header class="container">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-                <button
-                    type="button"
-                    data-bs-target="#demo"
-                    data-bs-slide-to="0"
-                    class="active"
-                ></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-            </div>
-
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../image/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
-                </div>
-                <div class="carousel-item">
-                    <img src="../image/slide2.jpg" alt="Chicago" class="d-block w-100" />
-                </div>
-                <div class="carousel-item">
-                    <img src="../image/slide3.jpg" alt="New York" class="d-block w-100" />
-                </div>
-            </div>
-
-            <!-- Left and right controls/icons -->
-            <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#demo"
-            data-bs-slide="prev"
-        >
-            <span class="carousel-control-prev-icon"></span>
-        </button>
+    <header class="container"></header>
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicators/dots -->
+      <div class="carousel-indicators">
         <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#demo"
-            data-bs-slide="next"
-        >
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </header>
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="0"
+          class="active"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="2"
+        ></button>
+      </div>
+
+      <!-- The slideshow/carousel -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="../image/slide1.jpg"
+            alt="Los Angeles"
+            class="d-block w-100"
+          />
+        </div>
+        <div class="carousel-item">
+          <img src="../image/slide2.jpg" alt="Chicago" class="d-block w-100" />
+        </div>
+        <div class="carousel-item">
+          <img src="../image/slide3.jpg" alt="New York" class="d-block w-100" />
+        </div>
+      </div>
+
+      <!-- Left and right controls/icons -->
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+
     <section include-html="/public/html/section1.html"></section>
-    
 
-  <section include-html="/public/html/section2.html"></section>
+    <section include-html="/public/html/section2.html"></section>
 
-  <section include-html="/public/html/section3.html"></section>
+    <section include-html="/public/html/section3.html"></section>
 
     <footer include-html="public/html/footer.html"></footer>
     <!-- Bootstrap core JS-->
