--- a/carousel.html
+++ b/carousel.html
@@ -14,13 +14,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../image/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
+      <img src="./image/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
     </div>
     <div class="carousel-item">
-      <img src="../image/slide2.jpg" alt="Chicago" class="d-block w-100" />
+      <img src="./image/slide2.jpg" alt="Chicago" class="d-block w-100" />
     </div>
     <div class="carousel-item">
-      <img src="../image/slide3.jpg" alt="New York" class="d-block w-100" />
+      <img src="./image/slide3.jpg" alt="New York" class="d-block w-100" />
     </div>
   </div>
 
