--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     />
     <title>Run Into</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,11 +36,11 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/main.js" type="module"></script>
-    <script src="../js/includeHTML.js"></script>
+    <script src="./js/main.js" type="module"></script>
+    <script src="./js/includeHTML.js"></script>
   </head>
   <body>
-    <nav include-html="/docs/navbar.html"></nav>
+    <nav include-html="/navbar.html"></nav>
     <script>
       includeHTML();
     </script>
@@ -48,17 +48,14 @@
     <!-- Header-->
 
     <header class="container"></header>
-    <div include-html="/docs/carousel.html"></div>
-    <section include-html="/docs/section1.html"></section>
-
-    <section include-html="/docs/section2.html"></section>
-
-    <section include-html="/docs/section3.html"></section>
-
-    <footer include-html="/docs/footer.html"></footer>
+    <div include-html="/carousel.html"></div>
+    <section include-html="/section1.html"></section>
+    <section include-html="/section2.html"></section>
+    <section include-html="/section3.html"></section>
+    <footer include-html="/footer.html"></footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="../js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
   </body>
 </html>
