--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="./js/includeHTML.js"></script>
   </head>
   <body>
-    <nav include-html="/html/navbar.html"></nav>
+    <nav include-html="/enjoytrip-front/navbar.html"></nav>
     <script>
       includeHTML();
     </script>
@@ -48,11 +48,11 @@
     <!-- Header-->
 
     <header class="container"></header>
-    <div include-html="/html/carousel.html"></div>
-    <section include-html="/html/section1.html"></section>
-    <section include-html="/html/section2.html"></section>
-    <section include-html="/html/section3.html"></section>
-    <footer include-html="/html/footer.html"></footer>
+    <div include-html="/enjoytrip-front/carousel.html"></div>
+    <section include-html="/enjoytrip-front/section1.html"></section>
+    <section include-html="/enjoytrip-front/section2.html"></section>
+    <section include-html="/enjoytrip-front/section3.html"></section>
+    <footer include-html="/enjoytrip-front/footer.html"></footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
