--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="./js/includeHTML.js"></script>
   </head>
   <body>
-    <nav include-html="/enjoytrip-front/navbar.html"></nav>
+    <!-- <nav include-html="/enjoytrip-front/navbar.html"></nav>
 
     <hr />
     <header class="container"></header>
@@ -48,7 +48,24 @@
     <section include-html="/enjoytrip-front/section1.html"></section>
     <section include-html="/enjoytrip-front/section2.html"></section>
     <section include-html="/enjoytrip-front/section3.html"></section>
-    <footer include-html="/enjoytrip-front/footer.html"></footer>
+    <footer include-html="/enjoytrip-front/footer.html"></footer> -->
+
+    <nav include-html="/enjoytrip-front/enjoytrip-front/navbar.html"></nav>
+    <hr />
+    <header class="container"></header>
+    <div include-html="/enjoytrip-front/enjoytrip-front/carousel.html"></div>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section1.html"
+    ></section>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section2.html"
+    ></section>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section3.html"
+    ></section>
+    <footer
+      include-html="/enjoytrip-front/enjoytrip-front/footer.html"
+    ></footer>
     <script>
       includeHTML();
     </script>
