섹션 틀 추가

--- a/enjoytrip-front/section2.html
+++ b/enjoytrip-front/section2.html
@@ -1,13 +1,14 @@
-<section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
+<!-- Section-->
+<section>
+    <div class="container px-4 px-lg-5">
       <div class="row mt-2"><h4>A 지역 베스트 상품</h4></div>
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         <div class="col mb-5">
               <div class="card h-100">
                   <!-- Product image-->
                   <img
-                      class="card-img-top"
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                      class="card-img-top img-fluid"
+                      src="./image/image_where/1.jfif"
                       alt="..."
                   />
                   <!-- Product details-->
@@ -38,8 +39,8 @@
               </div>
               <!-- Product image-->
               <img
-                  class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  class="card-img-top img-fluid"
+                  src="./image/image_where/2.jfif"
                   alt="..."
               />
               <!-- Product details-->
@@ -79,8 +80,8 @@
               </div>
               <!-- Product image-->
               <img
-                  class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  class="card-img-top img-fluid"
+                  src="./image/image_where/3.jfif"
                   alt="..."
               />
               <!-- Product details-->
@@ -105,8 +106,8 @@
               <div class="card h-100">
               <!-- Product image-->
               <img
-                  class="card-img-top"
-                  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                  class="card-img-top img-fluid"
+                  src="./image/image_where/4.jfif"
                   alt="..."
               />
               <!-- Product details-->
