carousel api 로 변경

--- a/enjoytrip-front/carousel.html
+++ b/enjoytrip-front/carousel.html
@@ -14,13 +14,28 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./image/class/slide1.jpg" alt="Los Angeles" class="d-block w-100" />
+      <img
+        id="carousel-img1"
+        src="./image/class/slide1.jpg"
+        alt="Los Angeles"
+        class="d-block w-100"
+      />
     </div>
     <div class="carousel-item">
-      <img src="./image/class/slide2.jpg" alt="Chicago" class="d-block w-100" />
+      <img
+        id="carousel-img2"
+        src="./image/class/slide2.jpg"
+        alt="Chicago"
+        class="d-block w-100"
+      />
     </div>
     <div class="carousel-item">
-      <img src="./image/class/slide3.jpg" alt="New York" class="d-block w-100" />
+      <img
+        id="carousel-img3"
+        src="./image/class/slide3.jpg"
+        alt="New York"
+        class="d-block w-100"
+      />
     </div>
   </div>
 
