--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/section1.js" type="module"></script>
+    <script src="./js/carousel.js" type="module"></script>
     <script src="./js/includeHTML.js"></script>
   </head>
   <body>
@@ -44,8 +45,9 @@
 
     <hr />
     <header class="container"></header>
-    <div include-html="/enjoytrip-front/carousel.html"></div>
+
     <section include-html="/enjoytrip-front/section1.html"></section>
+    <div include-html="/enjoytrip-front/carousel.html"></div>
     <section include-html="/enjoytrip-front/section2.html"></section>
     <section include-html="/enjoytrip-front/section3.html"></section>
     <footer include-html="/enjoytrip-front/footer.html"></footer>
