--- a/enjoytrip-front/section1.html
+++ b/enjoytrip-front/section1.html
@@ -3,9 +3,9 @@
   console.log("hi");
 </script>
 
-<section class="py-5">
+<section class="pb-5">
       <div class="container px-4 px-lg-5 mt-5">
-        <div class="row mt-2"><h1>여행이 돌아왔어요!</h1></div>
+        <div class="row my-2"><h1>덕수궁 돌담길엔 아직 남아있어요</h1></div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
           <div class="col mb-5">
                 <div class="card h-100">
@@ -21,6 +21,13 @@
                         <!-- Product name-->
                         <h5 id="section1-title1" 
                             class="fw-bolder"></h5>
+                        <div class="d-flex justify-content-center small text-warning mb-2">
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        </div>
                         <!-- Product price-->
                         <div id="section1-addr1"></div>
                         </div>
@@ -40,7 +47,7 @@
                     class="badge bg-dark text-white position-absolute"
                     style="top: 0.5rem; right: 0.5rem"
                 >
-                    Sale
+                    추천!
                 </div>
                 <!-- Product image-->
                 <img id="section1-img2"
@@ -89,6 +96,13 @@
                     <div class="text-center">
                     <!-- Product name-->
                     <h5 id="section1-title3"  class="fw-bolder"></h5>
+                    <div class="d-flex justify-content-center small text-warning mb-2">
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                        <div class="bi-star-fill"></div>
+                    </div>
                     <!-- Product price-->
                     <div id="section1-addr3"></div>
                     
