--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
     <header class="container"></header>
 
     <section include-html="/enjoytrip-front/section1.html"></section>
+
+    <section include-html="/enjoytrip-front/triplist.html"></section>
+
     <div include-html="/enjoytrip-front/carousel.html"></div>
     <section include-html="/enjoytrip-front/section2.html"></section>
     <section include-html="/enjoytrip-front/section3.html"></section>
+
     <footer include-html="/enjoytrip-front/footer.html"></footer>
 
     <!-- <nav include-html="/enjoytrip-front/enjoytrip-front/navbar.html"></nav>
