지역별 관광정보 조회 제목만

--- a/enjoytrip-front/triplist.html
+++ b/enjoytrip-front/triplist.html
@@ -1,8 +1,6 @@
 <div class="container">
-  <div class="">
-    <div class="alert alert-primary mt-3 text-center fw-bold" role="alert">
-      전국 관광지 정보 알아보기
-    </div>
+  <div class="container px-4 px-lg-5 mt-5">
+    <h1>지역별 관광 정보</h1>
     <!-- 관광지 검색 start -->
     <form class="d-flex my-3" onsubmit="return false;" role="search">
       <select id="search-area" class="form-select me-2">
@@ -19,13 +17,13 @@
         <option value="38">쇼핑</option>
         <option value="39">음식점</option>
       </select>
-      <input
+      <!-- <input
         id="search-keyword"
         class="form-control me-2"
         type="search"
         placeholder="검색어"
         aria-label="검색어"
-      />
+      /> -->
       <button id="btn-search" class="btn btn-outline-success" type="button">
         검색
       </button>
