--- a/enjoytrip-front/section1.html
+++ b/enjoytrip-front/section1.html
@@ -35,7 +35,7 @@
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center">
-                        <a class="btn btn-outline-dark mt-auto" href="#">View options</a>
+                        <a class="btn btn-outline-dark mt-auto" href="#">자세히 보기</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                    <a class="btn btn-outline-dark mt-auto" href="#">자세히 보기</a>
                     </div>
                 </div>
                 </div>
@@ -111,7 +111,7 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                    <a class="btn btn-outline-dark mt-auto" href="#">자세히 보기</a>
                     </div>
                 </div>
                 </div>
@@ -145,7 +145,7 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                    <a class="btn btn-outline-dark mt-auto" href="#">자세히 보기</a>
                     </div>
                 </div>
                 </div>
