STYLE : 상하 폭 조정

--- a/enjoytrip-front/triplist.html
+++ b/enjoytrip-front/triplist.html
@@ -1,6 +1,6 @@
 <!-- 중앙 content start -->
-<div class="container px-4 px-lg-5 mt-5">
-  <div style="height: 30px"></div>
+<div class="container px-4 px-lg-5 mb-5 pb-5">
+  <div style="height: 5px"></div>
   <div class="row">
     <div class="col">
       <h1>관광지 정보 검색하기</h1>
