--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <script src="./js/section1.js" type="module"></script>
     <script src="./js/carousel.js" type="module"></script>
     <script src="./js/includeHTML.js"></script>
+    <script src="./js/mypage.js"></script>
+
   </head>
   <body>
     <nav include-html="/enjoytrip-front/navbar.html"></nav>
@@ -75,6 +77,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="./js/scripts.js"></script>
+    <!-- <script src="./js/scripts.js"></script> -->
   </body>
 </html>
