--- a/enjoytrip-front/mypage.html
+++ b/enjoytrip-front/mypage.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+  </head>
+  <body>
+    <div id="userStatus"></div>
+    <div id="1">a</div>
 
-</head>
-<body>
-볼꺼없다
-<div id="1">a</div>
-    
-<!-- <h1 id="1">~</h1> -->
-<h1 id="2">~</h1>
-<h1 id="3">~</h1>
-<h1 id="4">`</h1>
+    <!-- <h1 id="1">~</h1> -->
+    <h1 id="2">~</h1>
+    <h1 id="3">~</h1>
+    <h1 id="4">`</h1>
 
-<script>
-
-    function loding(params) {
-
+    <script>
+      if (window.localStorage.getItem(1) === null) {
+        document.getElementById('userStatus').innerHTML =
+          '<h1>아직 로그인 하지 않았습니다!  <br> 로그인해주세요!</h1>';
+      }
+      function loading(params) {
         for (let index = 1; index < 5; index++) {
-            // alert(index)
-            document.getElementById(index).innerText = window.localStorage.key(index);            
+          // alert(index)
+          document.getElementById(index).innerText =
+            window.localStorage.getItem(index);
         }
-    }
-    let name = document.getElementById("1");
-    console.log(name.innerText);
-    name.innerText = window.localStorage.getItem(1);
+      }
+      let name = document.getElementById('1');
+      console.log(name.innerText);
+      name.innerText = window.localStorage.getItem(1);
 
-    window.onload =  loding;
-
-</script>
-</body>
-
-
+      window.onload = loading;
+    </script>
+  </body>
 </html>
