--- a/enjoytrip-front/mypage.html
+++ b/enjoytrip-front/mypage.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Run Into</title>
+
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../js/includeHTML.js"></script>
+    <script src="../js/mypage.js"></script>
     <title>Document</title>
   </head>
   <body>
+    <nav include-html="/enjoytrip-front/navbar.html"></nav>
     <div id="userStatus"></div>
     <div id="1">a</div>
 
@@ -16,7 +30,7 @@
     <h1 id="4">`</h1>
 
     <script>
-      if (window.localStorage.getItem(1) === null) {
+      if (localStorage.getItem(1) === null) {
         document.getElementById('userStatus').innerHTML =
           '<h1>아직 로그인 하지 않았습니다!  <br> 로그인해주세요!</h1>';
       }
@@ -24,14 +38,14 @@
         for (let index = 1; index < 5; index++) {
           // alert(index)
           document.getElementById(index).innerText =
-            window.localStorage.getItem(index);
+            localStorage.getItem(index);
         }
       }
-      let name = document.getElementById('1');
-      console.log(name.innerText);
-      name.innerText = window.localStorage.getItem(1);
 
       window.onload = loading;
+    </script>
+    <script>
+      includeHTML();
     </script>
   </body>
 </html>
