로그인 안하면 로그인 유도 문구

--- a/enjoytrip-front/mypage.html
+++ b/enjoytrip-front/mypage.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <<<<<<< HEAD ======= >>>>>>> 4edcc72355a2fd26bb2f35afddb9176a147d7685
     <title>Run Into</title>
 
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -24,49 +23,51 @@
     <nav include-html="/enjoytrip-front/navbar.html"></nav>
 
     <hr />
-    <h1>개인 정보 수정</h1>
-    <br />
-    <div class="card">
-      <div class="card-header"><h2>기본 정보</h2></div>
-      <div class="card-body">
-        <div class="card">
-          <ul class="list-group list-group-flush">
-            <div class="row">
-              <div class="col-md-3" style="padding-right: 0">
-                <li class="list-group-item">이름</li>
+    <div class="container px-4 px-lg-5 mt-5">
+      <h1 id="userStatus">개인 정보 수정</h1>
+      <br />
+      <div class="card">
+        <div class="card-header"><h2>기본 정보</h2></div>
+        <div class="card-body">
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <div class="row">
+                <div class="col-md-3" style="padding-right: 0">
+                  <li class="list-group-item">이름</li>
+                </div>
+                <div class="col-md-9" style="padding-left: 0">
+                  <li class="list-group-item" id="1"></li>
+                </div>
               </div>
-              <div class="col-md-9" style="padding-left: 0">
-                <li class="list-group-item" id="1"></li>
-              </div>
-            </div>
 
-            <div class="row">
-              <div class="col-md-3" style="padding-right: 0">
-                <li class="list-group-item">아이디</li>
+              <div class="row">
+                <div class="col-md-3" style="padding-right: 0">
+                  <li class="list-group-item">아이디</li>
+                </div>
+                <div class="col-md-9" style="padding-left: 0">
+                  <li class="list-group-item" id="2"></li>
+                </div>
               </div>
-              <div class="col-md-9" style="padding-left: 0">
-                <li class="list-group-item" id="2"></li>
-              </div>
-            </div>
 
-            <div class="row">
-              <div class="col-md-3" style="padding-right: 0">
-                <li class="list-group-item">비밀 번호</li>
+              <div class="row">
+                <div class="col-md-3" style="padding-right: 0">
+                  <li class="list-group-item">비밀 번호</li>
+                </div>
+                <div class="col-md-9" style="padding-left: 0">
+                  <li class="list-group-item" id="3"></li>
+                </div>
               </div>
-              <div class="col-md-9" style="padding-left: 0">
-                <li class="list-group-item" id="3"></li>
-              </div>
-            </div>
 
-            <div class="row">
-              <div class="col-md-3" style="padding-right: 0">
-                <li class="list-group-item">비밀 번호 확인</li>
+              <div class="row">
+                <div class="col-md-3" style="padding-right: 0">
+                  <li class="list-group-item">비밀 번호 확인</li>
+                </div>
+                <div class="col-md-9" style="padding-left: 0">
+                  <li class="list-group-item" id="4"></li>
+                </div>
               </div>
-              <div class="col-md-9" style="padding-left: 0">
-                <li class="list-group-item" id="4"></li>
-              </div>
-            </div>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
