배포용 코드

--- a/index.html
+++ b/index.html
@@ -57,19 +57,29 @@
     <script></script>
   </head>
   <body>
-    <nav include-html="/enjoytrip-front/navbar.html"></nav>
+    <nav include-html="/enjoytrip-front/enjoytrip-front/navbar.html"></nav>
 
     <hr />
     <header class="container"></header>
 
-    <section include-html="/enjoytrip-front/section1.html"></section>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section1.html"
+    ></section>
 
-    <section include-html="/enjoytrip-front/triplist.html"></section>
-    <div include-html="/enjoytrip-front/carousel.html"></div>
-    <section include-html="/enjoytrip-front/section2.html"></section>
-    <section include-html="/enjoytrip-front/section3.html"></section>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/triplist.html"
+    ></section>
+    <div include-html="/enjoytrip-front/enjoytrip-front/carousel.html"></div>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section2.html"
+    ></section>
+    <section
+      include-html="/enjoytrip-front/enjoytrip-front/section3.html"
+    ></section>
 
-    <footer include-html="/enjoytrip-front/footer.html"></footer>
+    <footer
+      include-html="/enjoytrip-front/enjoytrip-front/footer.html"
+    ></footer>
 
     <script>
       includeHTML();
