--- a/enjoytrip-front/navbar.html
+++ b/enjoytrip-front/navbar.html
@@ -123,7 +123,7 @@
           <li class="nav-item">
             <a
               class="nav-link active"
-              href="/enjoytrip-front/mypage.html"
+              href="/enjoytrip-front/enjoytrip-front/mypage.html"
               target="_self"
             >
               <button class="nav-link btn btn-light" type="button">
